--- a/1109.md
+++ b/1109.md
@@ -1,4 +1,4 @@
-<img width="996" alt="image" src="https://github.com/daeunni/Basic_matlab/assets/62705839/2857cea0-b6f3-4556-b982-1a2309b4ebf1">## 오일러(Euler) 방법 
+## 오일러(Euler) 방법 
 ![image](https://github.com/daeunni/Basic_matlab/assets/62705839/afc5f73c-8faa-4479-9526-0ce0a67d1c8a)
 
 - y(0) = 3은 initial point
