--- a/1123.md
+++ b/1123.md
@@ -99,3 +99,95 @@ legend('exact solution','numerical solution',...
 title('Daeun Lee');
 ```
 <img width="949" alt="image" src="https://github.com/daeunni/Basic_matlab/assets/62705839/2e5a274b-ff23-414b-9104-f30075533bfb">
+
+
+## Quiz 
+```Matlab
+clear; clf; 
+T=5;         % time? 
+h=0.01; 
+w=1; 
+tol=5.0e-7; 
+t(1)=0;       % 점점 증가 
+
+f = @(t,y) -2*t.*sin(t.^2); 
+exact = @(t) cos(t.^2);         % exact solution (y)
+
+flag=0; 
+
+i=1; 
+y(1)=w(1);
+
+fprintf('time numerical solution \n')
+fprintf('%3.2f %f \n',t(1),y(1));
+
+while flag==0
+    k1=f(t(i),w);
+    k2=f(t(i)+h/4,w+h*k1/4);
+    k3=f(t(i)+3*h/8,w+h*3/32*k1+h*9/32*k2);
+    k4=f(t(i)+12/13*h, ...
+    w+h*1932/2197*k1-h*7200/2197*k2+h*7296/2197*k3);
+
+    k5=f(t(i)+h,w+h*439/216*k1-h*8*k2+h*3680/513*k3-h*845/4104*k4);
+    k6=f(t(i)+h/2,w-h*8/27*k1+h*2*k2 ...
+    -h*3544/2565*k3+h*1859/4104*k4-h*11/40*k5);
+
+    RK5=w+h*25/216*k1+h*1408/2565*k3+h*2197/4104*k4-h*1/5*k5;
+    RK6=w+h*16/135*k1+h*6656/12825*k3+h*28561/56430*k4 ...
+    -h*9/50*k5+h*2/55*k6;
+
+if (abs(RK6-RK5))/h <tol
+    y(i+1)=RK5; 
+    w=RK5; 
+    t(i+1)=t(i)+h;       % h를 더함 -> t가 됨 
+    i=i+1;
+    fprintf('%3.2f %f \n',t(i),y(i));
+end
+
+% 오차에 따라 q값으로 adaptive하게 update 
+q=0.84*(tol/((abs(RK6-RK5))/h))^(1/4);
+
+if q<0.1
+    h=0.1*h;
+
+elseif q>4
+    h=4*h;
+
+else
+    h=q*h;
+end
+
+if t(end)+h>T
+    h=T-t(end);
+end
+
+if t(end)==T
+    flag=1;
+end
+
+end
+
+
+% Euler method
+T2(1) = 0 
+Y2(1) = 1
+plot(T(1), Y2(1), 'bo', 'MarkerSize', 10)
+
+Nt = 116 ; 
+h = 5/Nt;
+for i = 1:Nt
+    T2(i+1) = T2(i) + h ; 
+    Y2(i+1) = Y2(i) + h* f(T2(i), Y2(i)) ; 
+end 
+
+
+plot(T2, Y2, 'bo-', t,exact(t),'r-',t,y,'k*',t,min(y)-0*t,'ko')
+axis([t(1) t(end) min(y)-0.1 max(y)+0.1])
+
+legend('euler method', 'exact solution','numerical solution',...
+'adaptive grid','Location','best')
+title('Daeun Lee');
+```
+<img width="1087" alt="image" src="https://github.com/daeunni/Basic_matlab/assets/62705839/fb227f6f-6afb-47cb-bc2e-64b5c9478377">
+
+
